ports-staging/nnn/README
needs patching for netbsd-curses

errors:

```
//bin/gcc  -s -w -Os -pipe -fstack-protector-strong -static --static -no-pie -Wl,-Bstatic -static-libgcc -Wl,--gc-sections -static-libstdc++ -static-libasan -static-libtsan -static-liblsan -static-libubsan  -s -w -Os -pipe -fstack-protector-strong -static --static -no-pie -Wl,-Bstatic -static-libgcc -Wl,--gc-sections -static-libstdc++ -static-libasan -static-libtsan -static-liblsan -static-libubsan -Wall -Wextra -Wno-unused-parameter -O3   -s -static --static -fdata-sections
-ffunction-sections -o nnn src/nnn.c -lncurses -lterminfo  -lreadline
src/nnn.c: In function 'main':
src/nnn.c:4872:20: error: 'rl_menu_complete' undeclared (first use in this function); did you mean 'rl_complete'?
 4872 |  rl_bind_key('\t', rl_menu_complete);
      |                    ^~~~~~~~~~~~~~~~
      |                    rl_complete
src/nnn.c:4872:20: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Makefile:37: nnn] Error 1
→ error: make  failed for nnn
%
```
